--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,15 @@ body {
   margin: 20px auto;
   border-radius: 10px;
   max-width: 700px;
+  max-height: 400px;
+  background-color: beige;
 }
 #input-City {
   font-size: 30px;
 }
 #search-Butt {
-  width: min-content;
+  max-width: 30px;
+  height: 30px;
 }
 
 h1 {
@@ -53,4 +56,10 @@ units {
   cursor: pointer;
   color: green;
   font-size: 15px;
+}
+#git-Link {
+  font-size: medium;
+}
+#nazanin {
+  color: lightpink;
 }
